Bug 462223 - Update welcome_help (no search sidebar anymore). NPOB. r=gavin.
UltraBlame original commit: ca880b3ff7fc1d93433c9251532c31488c881000

--- a/toolkit/locales/en-US/chrome/mozapps/help/welcome.xhtml
+++ b/toolkit/locales/en-US/chrome/mozapps/help/welcome.xhtml
@@ -437,14 +437,6 @@ be
 displayed
 in
 the
-<
-em
->
-Search
-<
-/
-em
->
 sidebar
 as
 you
@@ -458,21 +450,6 @@ in
 the
 sidebar
 again
-click
-the
-close
-button
-on
-the
-<
-em
->
-Search
-<
-/
-em
->
-sidebar
 clear
 the
 <
@@ -695,28 +672,6 @@ li
 ul
 >
 <
-div
-class
-=
-"
-contentsBox
-"
->
-<
-em
->
-09
-July
-2005
-<
-/
-em
->
-<
-/
-div
->
-<
 p
 >
 Copyright
@@ -730,9 +685,7 @@ Contributors
 to
 the
 Mozilla
-Help
-Viewer
-Project
+project
 .
 <
 /
