--- a/dom/src/threads/test/test_simpleThread.html
+++ b/dom/src/threads/test/test_simpleThread.html
@@ -274,7 +274,7 @@ started
 :
 is
 (
-gotError
+gotErrors
 true
 )
 ;
@@ -352,7 +352,7 @@ false
 )
 ;
 var
-gotError
+gotErrors
 =
 false
 ;
@@ -396,7 +396,80 @@ asdf
 '
 )
 ;
-gotError
+worker
+.
+onerror
+=
+function
+(
+otherEvent
+)
+{
+is
+(
+otherEvent
+.
+target
+worker
+)
+;
+is
+(
+otherEvent
+.
+data
+'
+[
+JavaScript
+Error
+:
+"
+Components
+is
+not
+defined
+"
+{
+file
+:
+'
++
+'
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+dom
+/
+src
+/
+threads
+/
+test
+/
+'
++
+'
+simpleThread_worker
+.
+js
+"
+line
+:
+6
+}
+]
+'
+)
+;
+gotErrors
 =
 true
 ;
@@ -406,7 +479,7 @@ onerror
 =
 function
 (
-otherEvent
+oneMoreEvent
 )
 {
 ok
@@ -420,7 +493,7 @@ error
 :
 "
 +
-otherEvent
+oneMoreEvent
 .
 data
 )
@@ -432,6 +505,9 @@ finish
 )
 ;
 }
+;
+}
+;
 }
 ;
 worker
@@ -440,6 +516,15 @@ postMessage
 (
 "
 asdf
+"
+)
+;
+worker
+.
+postMessage
+(
+"
+components
 "
 )
 ;
