Bug 468413. Make test_bug335816.html reliable by using onload instead of setTimeout. r=smontagu
UltraBlame original commit: 8a7a803e86fda99a5af2c10fe2b33d895b3fd5a2

--- a/intl/uconv/tests/test_bug335816.html
+++ b/intl/uconv/tests/test_bug335816.html
@@ -153,6 +153,13 @@ head
 >
 <
 body
+onload
+=
+"
+test
+(
+)
+"
 >
 <
 pre
@@ -245,12 +252,6 @@ charm
 "
 ;
 }
-setTimeout
-(
-test
-100
-)
-;
 SimpleTest
 .
 waitForExplicitFinish
