Test bustage fix by using specific event listener.
UltraBlame original commit: 741b47107e5e6b811bbd5c147c2cb2d9981ed652

--- a/toolkit/content/tests/widgets/test_videocontrols.html
+++ b/toolkit/content/tests/widgets/test_videocontrols.html
@@ -318,6 +318,17 @@ Let
 the
 fadein
 happen
+video
+.
+addEventListener
+(
+"
+mouseover
+"
+runTest
+false
+)
+;
 synthesizeMouse
 (
 video
@@ -328,19 +339,6 @@ type
 :
 "
 mouseover
-"
-}
-)
-;
-setTimeout
-(
-runTest
-0
-{
-type
-:
-"
-setTimeout
 "
 }
 )
@@ -356,7 +354,7 @@ event
 .
 type
 "
-setTimeout
+mouseover
 "
 "
 checking
@@ -365,12 +363,50 @@ type
 "
 )
 ;
+video
+.
+removeEventListener
+(
+"
+mouseover
+"
+runTest
+false
+)
+;
 /
 /
 Click
 the
 play
 button
+.
+Do
+this
+from
+a
+timeout
+lest
+the
+test
+'
+s
+/
+/
+mouseover
+handler
+fire
+before
+the
+video
+control
+'
+s
+handler
+.
+setTimeout
+(
+"
 synthesizeMouse
 (
 video
@@ -378,6 +414,10 @@ video
 228
 {
 }
+)
+;
+"
+0
 )
 ;
 break
@@ -686,7 +726,7 @@ event
 +
 event
 .
-name
+type
 ;
 }
 testnum
