Backout bug 461680 and bustage fixes due to still failing on Linux and possible leaks.
UltraBlame original commit: c1164d43fef5a799833e87cd9d8fd11ad314008f

--- a/toolkit/content/tests/widgets/test_videocontrols.html
+++ b/toolkit/content/tests/widgets/test_videocontrols.html
@@ -318,17 +318,6 @@ Let
 the
 fadein
 happen
-video
-.
-addEventListener
-(
-"
-mouseover
-"
-runTest
-false
-)
-;
 synthesizeMouse
 (
 video
@@ -339,6 +328,19 @@ type
 :
 "
 mouseover
+"
+}
+)
+;
+setTimeout
+(
+runTest
+0
+{
+type
+:
+"
+setTimeout
 "
 }
 )
@@ -354,7 +356,7 @@ event
 .
 type
 "
-mouseover
+setTimeout
 "
 "
 checking
@@ -363,50 +365,12 @@ type
 "
 )
 ;
-video
-.
-removeEventListener
-(
-"
-mouseover
-"
-runTest
-false
-)
-;
 /
 /
 Click
 the
 play
 button
-.
-Do
-this
-from
-a
-timeout
-lest
-the
-test
-'
-s
-/
-/
-mouseover
-handler
-fire
-before
-the
-video
-control
-'
-s
-handler
-.
-setTimeout
-(
-"
 synthesizeMouse
 (
 video
@@ -414,10 +378,6 @@ video
 228
 {
 }
-)
-;
-"
-0
 )
 ;
 break
@@ -726,7 +686,7 @@ event
 +
 event
 .
-type
+name
 ;
 }
 testnum
