Bug 469255 - Seeking while seek in progress not handled correctly by Wave decoder; r+sr=roc
UltraBlame original commit: a993a51a86931d0637095f4ae2a0288ffe4a1077

--- a/content/media/video/test/test_seek1.html
+++ b/content/media/video/test/test_seek1.html
@@ -215,9 +215,9 @@ completed
 =
 false
 ;
-ok
-(
-!
+var
+v
+=
 document
 .
 getElementById
@@ -226,6 +226,11 @@ getElementById
 v
 '
 )
+;
+ok
+(
+!
+v
 .
 seeking
 "
@@ -239,7 +244,7 @@ false
 ;
 try
 {
-v1
+v
 .
 seeking
 =
