--- a/content/media/video/test/test_wav_seek4.html
+++ b/content/media/video/test/test_wav_seek4.html
@@ -12,12 +12,13 @@ head
 <
 title
 >
+Wave
 Media
 test
 :
 seek
 test
-8
+4
 <
 /
 title
@@ -108,18 +109,11 @@ head
 body
 >
 <
-video
+audio
 id
 =
 '
 v
-'
-src
-=
-'
-seek
-.
-ogg
 '
 onloadedmetadata
 =
@@ -130,10 +124,47 @@ startTest
 )
 ;
 '
+onseeking
+=
+'
+return
+seekStarted
+(
+)
+;
+'
+onseeked
+=
+'
+return
+seekEnded
+(
+)
+;
+'
+>
+<
+source
+type
+=
+'
+audio
+/
+x
+-
+wav
+'
+src
+=
+'
+r11025_s16_c1
+.
+wav
+'
 >
 <
 /
-video
+audio
 >
 <
 pre
@@ -160,59 +191,27 @@ javascript
 >
 /
 /
-If
-a
-NaN
+Test
+seeking
+works
+if
+current
+time
 is
-passed
-to
-currentTime
-make
-sure
-this
+set
+but
+audio
 is
-caught
-/
-/
-otherwise
-an
-infinite
-loop
-in
-the
-Ogg
-backend
-occurs
+not
+played
 .
 var
-v
+startPassed
 =
-document
-.
-getElementById
-(
-'
-v
-'
-)
+false
 ;
 var
 completed
-=
-false
-;
-var
-thrown1
-=
-false
-;
-var
-thrown2
-=
-false
-;
-var
-thrown3
 =
 false
 ;
@@ -228,113 +227,110 @@ completed
 return
 false
 ;
-try
-{
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
 v
 .
 currentTime
 =
-NaN
+0
+.
+5
+;
+return
+false
 ;
 }
-catch
+function
+seekStarted
 (
-e
 )
 {
-thrown1
+if
+(
+completed
+)
+return
+false
+;
+startPassed
 =
 true
 ;
+return
+false
+;
 }
-try
+function
+seekEnded
+(
+)
 {
+if
+(
+completed
+)
+return
+false
+;
+var
+t
+=
+document
+.
+getElementById
+(
+'
 v
+'
+)
 .
 currentTime
-=
--
-1
 ;
-}
-catch
+ok
 (
-e
-)
-{
-thrown2
+t
+>
 =
-true
-;
-}
-try
-{
-v
+0
 .
+4
+&
+&
+t
+<
+=
+0
+.
+6
+"
+Video
 currentTime
-=
-Math
+should
+be
+around
+0
 .
-random
-;
-}
-catch
-(
-e
+5
+:
+"
++
+t
 )
-{
-thrown3
-=
-true
 ;
-}
 completed
 =
 true
-;
-ok
-(
-thrown1
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-NaN
-"
-)
-;
-ok
-(
-thrown2
-"
-Setting
-currentTime
-to
-invalid
-value
-of
--
-1
-"
-)
-;
-ok
-(
-thrown3
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-a
-function
-"
-)
 ;
 SimpleTest
 .
