--- a/content/media/video/test/test_wav_seek5.html
+++ b/content/media/video/test/test_wav_seek5.html
@@ -12,12 +12,13 @@ head
 <
 title
 >
+Wave
 Media
 test
 :
 seek
 test
-8
+5
 <
 /
 title
@@ -108,18 +109,11 @@ head
 body
 >
 <
-video
+audio
 id
 =
 '
 v
-'
-src
-=
-'
-seek
-.
-ogg
 '
 onloadedmetadata
 =
@@ -130,10 +124,47 @@ startTest
 )
 ;
 '
+onseeking
+=
+'
+return
+seekStarted
+(
+)
+;
+'
+onseeked
+=
+'
+return
+seekEnded
+(
+)
+;
+'
+>
+<
+source
+type
+=
+'
+audio
+/
+x
+-
+wav
+'
+src
+=
+'
+r11025_s16_c1
+.
+wav
+'
 >
 <
 /
-video
+audio
 >
 <
 pre
@@ -160,59 +191,42 @@ javascript
 >
 /
 /
-If
+Test
+for
 a
-NaN
-is
-passed
-to
-currentTime
-make
-sure
-this
-is
-caught
-/
-/
-otherwise
-an
-infinite
-loop
-in
+seek
+followed
+by
+another
+seek
+before
 the
-Ogg
-backend
-occurs
+first
+is
+complete
 .
 var
-v
+startPassed
 =
-document
-.
-getElementById
-(
-'
-v
-'
-)
+false
+;
+var
+seek1Passed
+=
+false
+;
+var
+seek2Passed
+=
+false
+;
+var
+seekCount
+=
+0
 ;
 var
 completed
-=
-false
-;
-var
-thrown1
-=
-false
-;
-var
-thrown2
-=
-false
-;
-var
-thrown3
 =
 false
 ;
@@ -228,113 +242,186 @@ completed
 return
 false
 ;
-try
-{
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
 v
 .
 currentTime
 =
-NaN
+0
+.
+8
+;
+return
+false
 ;
 }
-catch
+function
+seekStarted
 (
-e
 )
 {
-thrown1
+if
+(
+completed
+)
+return
+false
+;
+startPassed
 =
 true
 ;
-}
-try
-{
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
 v
 .
 currentTime
 =
--
+0
+.
+5
+;
+return
+false
+;
+}
+function
+seekEnded
+(
+)
+{
+if
+(
+completed
+)
+return
+false
+;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
+seekCount
++
++
+;
+if
+(
+seekCount
+=
+=
 1
-;
-}
-catch
-(
-e
 )
 {
-thrown2
-=
-true
-;
-}
-try
-{
+if
+(
 v
 .
 currentTime
+>
 =
-Math
+0
 .
-random
-;
-}
-catch
-(
-e
+7
+&
+&
+v
+.
+currentTime
+<
+=
+0
+.
+9
 )
-{
-thrown3
+seek1Passed
 =
 true
 ;
 }
+if
+(
+seekCount
+=
+=
+2
+)
+{
+if
+(
+v
+.
+currentTime
+>
+=
+0
+.
+4
+&
+&
+v
+.
+currentTime
+<
+=
+0
+.
+6
+)
+seek2Passed
+=
+true
+;
+ok
+(
+seek1Passed
+"
+First
+seek
+"
+)
+;
+ok
+(
+seek2Passed
+"
+Second
+seek
+"
+)
+;
 completed
 =
 true
-;
-ok
-(
-thrown1
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-NaN
-"
-)
-;
-ok
-(
-thrown2
-"
-Setting
-currentTime
-to
-invalid
-value
-of
--
-1
-"
-)
-;
-ok
-(
-thrown3
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-a
-function
-"
-)
 ;
 SimpleTest
 .
@@ -342,6 +429,7 @@ finish
 (
 )
 ;
+}
 return
 false
 ;
