--- a/content/media/video/test/test_wav_seek7.html
+++ b/content/media/video/test/test_wav_seek7.html
@@ -12,12 +12,13 @@ head
 <
 title
 >
+Wave
 Media
 test
 :
 seek
 test
-8
+7
 <
 /
 title
@@ -108,18 +109,11 @@ head
 body
 >
 <
-video
+audio
 id
 =
 '
 v
-'
-src
-=
-'
-seek
-.
-ogg
 '
 onloadedmetadata
 =
@@ -130,10 +124,38 @@ startTest
 )
 ;
 '
+onseeked
+=
+'
+return
+seekEnded
+(
+)
+;
+'
+>
+<
+source
+type
+=
+'
+audio
+/
+x
+-
+wav
+'
+src
+=
+'
+r11025_s16_c1
+.
+wav
+'
 >
 <
 /
-video
+audio
 >
 <
 pre
@@ -156,33 +178,31 @@ type
 text
 /
 javascript
+;
+version
+=
+1
+.
+7
 "
 >
 /
 /
-If
-a
-NaN
-is
-passed
-to
-currentTime
-make
-sure
-this
-is
-caught
-/
-/
-otherwise
-an
-infinite
-loop
+Test
+for
+bug
+identified
+by
+Chris
+Pearce
 in
-the
-Ogg
-backend
-occurs
+comment
+40
+on
+/
+/
+bug
+449159
 .
 var
 v
@@ -197,24 +217,17 @@ v
 )
 ;
 var
+seekCount
+=
+0
+;
+var
 completed
 =
 false
 ;
 var
-thrown1
-=
-false
-;
-var
-thrown2
-=
-false
-;
-var
-thrown3
-=
-false
+interval
 ;
 function
 startTest
@@ -228,113 +241,117 @@ completed
 return
 false
 ;
-try
-{
-v
-.
-currentTime
+var
+seek
 =
-NaN
-;
-}
-catch
+function
 (
-e
 )
 {
-thrown1
+var
+i
 =
-true
+0
 ;
-}
-try
+for
+(
+;
+;
+)
 {
-v
-.
-currentTime
+i
++
 =
--
+0
+.
 1
 ;
-}
-catch
+if
 (
-e
+i
+>
+1
 )
-{
-thrown2
+i
 =
-true
+0
+;
+yield
+i
 ;
 }
-try
+}
+(
+)
+;
+interval
+=
+setInterval
+(
+function
+(
+)
 {
 v
 .
 currentTime
 =
-Math
+seek
 .
-random
+next
+(
+)
 ;
 }
-catch
+10
+)
+;
+return
+false
+;
+}
+function
+seekEnded
 (
-e
 )
 {
-thrown3
-=
-true
+if
+(
+completed
+)
+return
+false
 ;
-}
+seekCount
++
++
+;
+ok
+(
+true
+"
+Seek
+"
++
+seekCount
+)
+;
+if
+(
+seekCount
+=
+=
+3
+)
+{
+clearInterval
+(
+interval
+)
+;
 completed
 =
 true
-;
-ok
-(
-thrown1
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-NaN
-"
-)
-;
-ok
-(
-thrown2
-"
-Setting
-currentTime
-to
-invalid
-value
-of
--
-1
-"
-)
-;
-ok
-(
-thrown3
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-a
-function
-"
-)
 ;
 SimpleTest
 .
@@ -342,6 +359,7 @@ finish
 (
 )
 ;
+}
 return
 false
 ;
