--- a/content/media/video/test/test_wav_seek8.html
+++ b/content/media/video/test/test_wav_seek8.html
@@ -12,6 +12,7 @@ head
 <
 title
 >
+Wave
 Media
 test
 :
@@ -108,18 +109,11 @@ head
 body
 >
 <
-video
+audio
 id
 =
 '
 v
-'
-src
-=
-'
-seek
-.
-ogg
 '
 onloadedmetadata
 =
@@ -132,8 +126,27 @@ startTest
 '
 >
 <
+source
+type
+=
+'
+audio
 /
-video
+x
+-
+wav
+'
+src
+=
+'
+r11025_s16_c1
+.
+wav
+'
+>
+<
+/
+audio
 >
 <
 pre
@@ -180,7 +193,7 @@ infinite
 loop
 in
 the
-Ogg
+Wave
 backend
 occurs
 .
