--- a/content/media/video/test/test_wav_trunc.html
+++ b/content/media/video/test/test_wav_trunc.html
@@ -12,12 +12,16 @@ head
 <
 title
 >
+Wave
 Media
 test
 :
-seek
-test
-8
+playback
+ends
+when
+file
+is
+truncated
 <
 /
 title
@@ -108,18 +112,11 @@ head
 body
 >
 <
-video
+audio
 id
 =
 '
 v
-'
-src
-=
-'
-seek
-.
-ogg
 '
 onloadedmetadata
 =
@@ -130,10 +127,38 @@ startTest
 )
 ;
 '
+onended
+=
+'
+return
+playbackEnded
+(
+)
+;
+'
+>
+<
+source
+type
+=
+'
+audio
+/
+x
+-
+wav
+'
+src
+=
+'
+r11025_s16_c1_trunc
+.
+wav
+'
 >
 <
 /
-video
+audio
 >
 <
 pre
@@ -160,29 +185,13 @@ javascript
 >
 /
 /
-If
-a
-NaN
-is
-passed
-to
-currentTime
-make
-sure
-this
-is
-caught
-/
-/
-otherwise
-an
-infinite
-loop
-in
+Test
+if
 the
-Ogg
-backend
-occurs
+ended
+event
+works
+correctly
 .
 var
 v
@@ -197,22 +206,12 @@ v
 )
 ;
 var
+endPassed
+=
+false
+;
+var
 completed
-=
-false
-;
-var
-thrown1
-=
-false
-;
-var
-thrown2
-=
-false
-;
-var
-thrown3
 =
 false
 ;
@@ -228,111 +227,108 @@ completed
 return
 false
 ;
-try
-{
+ok
+(
 v
 .
-currentTime
-=
-NaN
-;
-}
-catch
-(
-e
-)
-{
-thrown1
-=
-true
-;
-}
-try
-{
+duration
+>
+0
+.
+3
+&
+&
 v
 .
-currentTime
-=
--
-1
-;
-}
-catch
-(
-e
-)
-{
-thrown2
-=
-true
-;
-}
-try
-{
+duration
+<
+0
+.
+5
+"
+Duration
+should
+be
+around
+0
+.
+4
+:
+"
++
 v
 .
-currentTime
-=
-Math
+duration
+)
+;
+v
 .
-random
+play
+(
+)
+;
+return
+false
 ;
 }
-catch
+function
+playbackEnded
 (
-e
 )
 {
-thrown3
-=
-true
-;
-}
+if
+(
+completed
+)
+return
+false
 completed
 =
 true
 ;
 ok
 (
-thrown1
-"
-Setting
+v
+.
 currentTime
-to
-invalid
-value
-of
-NaN
+>
+=
+0
+.
+3
+&
+&
+v
+.
+currentTime
+<
+=
+0
+.
+5
 "
+Checking
+currentTime
+at
+end
+:
+"
++
+v
+.
+currentTime
 )
 ;
 ok
 (
-thrown2
+v
+.
+ended
 "
-Setting
-currentTime
-to
-invalid
-value
-of
--
-1
-"
-)
-;
-ok
-(
-thrown3
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-a
-function
+Checking
+playback
+has
+ended
 "
 )
 ;
