--- a/content/media/video/test/test_wav_trunc_seek.html
+++ b/content/media/video/test/test_wav_trunc_seek.html
@@ -12,12 +12,14 @@ head
 <
 title
 >
+Wave
 Media
 test
 :
-seek
-test
-8
+seeking
+in
+truncated
+file
 <
 /
 title
@@ -108,18 +110,11 @@ head
 body
 >
 <
-video
+audio
 id
 =
 '
 v
-'
-src
-=
-'
-seek
-.
-ogg
 '
 onloadedmetadata
 =
@@ -130,10 +125,47 @@ startTest
 )
 ;
 '
+onseeked
+=
+'
+return
+endSeek
+(
+)
+;
+'
+onended
+=
+'
+return
+endTest
+(
+)
+;
+'
+>
+<
+source
+type
+=
+'
+audio
+/
+x
+-
+wav
+'
+src
+=
+'
+r11025_s16_c1_trunc
+.
+wav
+'
 >
 <
 /
-video
+audio
 >
 <
 pre
@@ -160,29 +192,13 @@ javascript
 >
 /
 /
-If
-a
-NaN
-is
-passed
-to
-currentTime
-make
-sure
-this
-is
-caught
-/
-/
-otherwise
-an
-infinite
-loop
-in
+Test
+if
 the
-Ogg
-backend
-occurs
+ended
+event
+works
+correctly
 .
 var
 v
@@ -197,22 +213,12 @@ v
 )
 ;
 var
+endPassed
+=
+false
+;
+var
 completed
-=
-false
-;
-var
-thrown1
-=
-false
-;
-var
-thrown2
-=
-false
-;
-var
-thrown3
 =
 false
 ;
@@ -228,117 +234,136 @@ completed
 return
 false
 ;
-try
-{
-v
-.
-currentTime
-=
-NaN
-;
-}
-catch
+ok
 (
-e
+v
+.
+duration
+>
+0
+.
+3
+&
+&
+v
+.
+duration
+<
+0
+.
+5
+"
+Duration
+should
+be
+around
+0
+.
+4
+:
+"
++
+v
+.
+duration
 )
-{
-thrown1
-=
-true
 ;
-}
-try
-{
 v
 .
 currentTime
 =
--
 1
-;
-}
-catch
-(
-e
-)
-{
-thrown2
-=
-true
-;
-}
-try
-{
-v
 .
-currentTime
-=
-Math
-.
-random
+0
+;
+return
+false
 ;
 }
-catch
-(
-e
-)
-{
-thrown3
-=
-true
-;
-}
-completed
-=
-true
-;
-ok
-(
-thrown1
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-NaN
-"
-)
-;
-ok
-(
-thrown2
-"
-Setting
-currentTime
-to
-invalid
-value
-of
--
-1
-"
-)
-;
-ok
-(
-thrown3
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-a
 function
+endTest
+(
+)
+{
+ok
+(
+v
+.
+ended
+"
+Checking
+ended
+set
+after
+seeking
+to
+EOF
+and
+playing
 "
 )
 ;
 SimpleTest
 .
 finish
+(
+)
+;
+return
+false
+;
+}
+function
+endSeek
+(
+)
+{
+if
+(
+completed
+)
+return
+false
+completed
+=
+true
+;
+ok
+(
+v
+.
+currentTime
+>
+=
+0
+.
+3
+&
+&
+v
+.
+currentTime
+<
+=
+0
+.
+5
+"
+Checking
+currentTime
+at
+end
+:
+"
++
+v
+.
+currentTime
+)
+;
+v
+.
+play
 (
 )
 ;
