--- a/content/media/video/test/test_wav_seek3.html
+++ b/content/media/video/test/test_wav_seek3.html
@@ -12,12 +12,13 @@ head
 <
 title
 >
+Wave
 Media
 test
 :
 seek
 test
-8
+3
 <
 /
 title
@@ -108,18 +109,11 @@ head
 body
 >
 <
-video
+audio
 id
 =
 '
 v
-'
-src
-=
-'
-seek
-.
-ogg
 '
 onloadedmetadata
 =
@@ -130,10 +124,56 @@ startTest
 )
 ;
 '
+onended
+=
+'
+return
+playbackEnded
+(
+)
+;
+'
+onseeking
+=
+'
+return
+seekStarted
+(
+)
+;
+'
+onseeked
+=
+'
+return
+seekEnded
+(
+)
+;
+'
+>
+<
+source
+type
+=
+'
+audio
+/
+x
+-
+wav
+'
+src
+=
+'
+r11025_s16_c1
+.
+wav
+'
 >
 <
 /
-video
+audio
 >
 <
 pre
@@ -160,59 +200,33 @@ javascript
 >
 /
 /
-If
-a
-NaN
+Test
+seeking
+works
+if
+current
+time
 is
-passed
-to
-currentTime
-make
-sure
-this
+set
+before
+audio
 is
-caught
 /
 /
-otherwise
-an
-infinite
-loop
-in
-the
-Ogg
-backend
-occurs
+playing
 .
 var
-v
+startPassed
 =
-document
-.
-getElementById
-(
-'
-v
-'
-)
+false
+;
+var
+endPassed
+=
+false
 ;
 var
 completed
-=
-false
-;
-var
-thrown1
-=
-false
-;
-var
-thrown2
-=
-false
-;
-var
-thrown3
 =
 false
 ;
@@ -228,111 +242,153 @@ completed
 return
 false
 ;
-try
-{
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
 v
 .
 currentTime
 =
-NaN
+0
+.
+5
 ;
-}
-catch
-(
-e
-)
-{
-thrown1
-=
-true
-;
-}
-try
-{
 v
 .
-currentTime
-=
--
-1
+play
+(
+)
+;
+return
+false
 ;
 }
-catch
+function
+seekStarted
 (
-e
 )
 {
-thrown2
+if
+(
+completed
+)
+return
+false
+;
+startPassed
 =
 true
 ;
+return
+false
+;
 }
-try
+function
+seekEnded
+(
+)
 {
+if
+(
+completed
+)
+return
+false
+;
+var
+t
+=
+document
+.
+getElementById
+(
+'
 v
+'
+)
 .
 currentTime
-=
-Math
-.
-random
 ;
-}
-catch
+ok
 (
-e
+t
+>
+=
+0
+.
+4
+&
+&
+t
+<
+=
+0
+.
+6
+"
+Video
+currentTime
+should
+be
+around
+0
+.
+5
+:
+"
++
+t
 )
-{
-thrown3
+;
+endPassed
 =
 true
 ;
+return
+false
+;
 }
+function
+playbackEnded
+(
+)
+{
+if
+(
+completed
+)
+return
+false
 completed
 =
 true
 ;
 ok
 (
-thrown1
+startPassed
 "
-Setting
-currentTime
-to
-invalid
-value
-of
-NaN
+send
+seeking
+event
 "
 )
 ;
 ok
 (
-thrown2
+endPassed
 "
-Setting
-currentTime
-to
-invalid
-value
-of
--
-1
-"
-)
-;
-ok
-(
-thrown3
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-a
-function
+send
+seeked
+event
 "
 )
 ;
