--- a/content/media/video/test/test_wav_seek6.html
+++ b/content/media/video/test/test_wav_seek6.html
@@ -12,12 +12,13 @@ head
 <
 title
 >
+Wave
 Media
 test
 :
 seek
 test
-8
+6
 <
 /
 title
@@ -108,18 +109,11 @@ head
 body
 >
 <
-video
+audio
 id
 =
 '
 v
-'
-src
-=
-'
-seek
-.
-ogg
 '
 onloadedmetadata
 =
@@ -130,10 +124,56 @@ startTest
 )
 ;
 '
+onended
+=
+'
+return
+playbackEnded
+(
+)
+;
+'
+onseeking
+=
+'
+return
+seekStarted
+(
+)
+;
+'
+onseeked
+=
+'
+return
+seekEnded
+(
+)
+;
+'
+>
+<
+source
+type
+=
+'
+audio
+/
+x
+-
+wav
+'
+src
+=
+'
+r11025_s16_c1
+.
+wav
+'
 >
 <
 /
-video
+audio
 >
 <
 pre
@@ -160,41 +200,32 @@ javascript
 >
 /
 /
-If
+Test
+for
 a
-NaN
-is
-passed
-to
-currentTime
-make
-sure
-this
-is
-caught
-/
-/
-otherwise
-an
-infinite
-loop
-in
+seek
+followed
+by
+a
+play
+before
 the
-Ogg
-backend
-occurs
+seek
+completes
+ensure
+we
+play
+at
+the
+end
+of
+the
+seek
 .
 var
-v
+startPassed
 =
-document
-.
-getElementById
-(
-'
-v
-'
-)
+false
 ;
 var
 completed
@@ -202,19 +233,9 @@ completed
 false
 ;
 var
-thrown1
+seekCount
 =
-false
-;
-var
-thrown2
-=
-false
-;
-var
-thrown3
-=
-false
+0
 ;
 function
 startTest
@@ -228,113 +249,146 @@ completed
 return
 false
 ;
-try
-{
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
 v
 .
 currentTime
 =
-NaN
+0
+.
+5
+;
+return
+false
 ;
 }
-catch
+function
+seekStarted
 (
-e
 )
 {
-thrown1
+if
+(
+completed
+)
+return
+false
+;
+startPassed
 =
 true
 ;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
+v
+.
+play
+(
+)
+;
+return
+false
+;
 }
-try
+function
+seekEnded
+(
+)
 {
+if
+(
+completed
+)
+return
+false
+;
+var
+v
+=
+document
+.
+getElementById
+(
+'
+v
+'
+)
+;
+ok
+(
 v
 .
 currentTime
+>
 =
--
-1
-;
-}
-catch
-(
-e
-)
-{
-thrown2
-=
-true
-;
-}
-try
-{
+0
+.
+4
+&
+&
 v
 .
 currentTime
+<
 =
-Math
+0
 .
-random
+6
+"
+First
+seek
+"
+)
+;
+return
+false
 ;
 }
-catch
+function
+playbackEnded
 (
-e
 )
 {
-thrown3
-=
-true
+if
+(
+completed
+)
+return
+false
 ;
-}
+ok
+(
+true
+"
+Playback
+ended
+"
+)
+;
 completed
 =
 true
-;
-ok
-(
-thrown1
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-NaN
-"
-)
-;
-ok
-(
-thrown2
-"
-Setting
-currentTime
-to
-invalid
-value
-of
--
-1
-"
-)
-;
-ok
-(
-thrown3
-"
-Setting
-currentTime
-to
-invalid
-value
-of
-a
-function
-"
-)
 ;
 SimpleTest
 .
