--- a/content/media/video/test/test_wav_trailing.html
+++ b/content/media/video/test/test_wav_trailing.html
@@ -12,12 +12,20 @@ head
 <
 title
 >
+Wave
 Media
 test
 :
-seek
-test
-8
+playback
+ends
+when
+file
+has
+trailing
+non
+-
+PCM
+data
 <
 /
 title
@@ -108,18 +116,11 @@ head
 body
 >
 <
-video
+audio
 id
 =
 '
 v
-'
-src
-=
-'
-seek
-.
-ogg
 '
 onloadedmetadata
 =
@@ -130,10 +131,38 @@ startTest
 )
 ;
 '
+onended
+=
+'
+return
+playbackEnded
+(
+)
+;
+'
+>
+<
+source
+type
+=
+'
+audio
+/
+x
+-
+wav
+'
+src
+=
+'
+r11025_s16_c1_trailing
+.
+wav
+'
 >
 <
 /
-video
+audio
 >
 <
 pre
@@ -160,29 +189,13 @@ javascript
 >
 /
 /
-If
-a
-NaN
-is
-passed
-to
-currentTime
-make
-sure
-this
-is
-caught
-/
-/
-otherwise
-an
-infinite
-loop
-in
+Test
+if
 the
-Ogg
-backend
-occurs
+ended
+event
+works
+correctly
 .
 var
 v
@@ -197,22 +210,12 @@ v
 )
 ;
 var
+endPassed
+=
+false
+;
+var
 completed
-=
-false
-;
-var
-thrown1
-=
-false
-;
-var
-thrown2
-=
-false
-;
-var
-thrown3
 =
 false
 ;
@@ -228,111 +231,74 @@ completed
 return
 false
 ;
-try
-{
 v
 .
-currentTime
-=
-NaN
+play
+(
+)
+;
+return
+false
 ;
 }
-catch
+function
+playbackEnded
 (
-e
 )
 {
-thrown1
-=
-true
-;
-}
-try
-{
-v
-.
-currentTime
-=
--
-1
-;
-}
-catch
+if
 (
-e
+completed
 )
-{
-thrown2
-=
-true
-;
-}
-try
-{
-v
-.
-currentTime
-=
-Math
-.
-random
-;
-}
-catch
-(
-e
-)
-{
-thrown3
-=
-true
-;
-}
+return
+false
 completed
 =
 true
 ;
 ok
 (
-thrown1
-"
-Setting
+v
+.
 currentTime
-to
-invalid
-value
-of
-NaN
-"
-)
-;
-ok
-(
-thrown2
-"
-Setting
+>
+=
+0
+.
+9
+&
+&
+v
+.
 currentTime
-to
-invalid
-value
-of
--
+<
+=
+1
+.
 1
 "
+Checking
+currentTime
+at
+end
+:
+"
++
+v
+.
+currentTime
 )
 ;
 ok
 (
-thrown3
+v
+.
+ended
 "
-Setting
-currentTime
-to
-invalid
-value
-of
-a
-function
+Checking
+playback
+has
+ended
 "
 )
 ;
